--- a/caesar_cipher/templates/ceasar_cipher/index.html
+++ b/caesar_cipher/templates/ceasar_cipher/index.html
@@ -15,6 +15,9 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 margin25">
+                <p ng-if="errors" class="errors" ng-repeat="(key, val) in errors">
+                    <span>{$ val $}</span>
+                </p>
                 <form action="index" method="post" name="codingForm" novalidate onsubmit="return false;">
                     {% csrf_token %}
                     <div class="col-lg-5 col-md-5" ng-class="{ 'has-error': codingForm.original_text.$touched && codingForm.original_text.$invalid }">
