--- a/caesar_cipher/templates/ceasar_cipher/index.html
+++ b/caesar_cipher/templates/ceasar_cipher/index.html
@@ -21,7 +21,7 @@
                 <form action="index" method="post" name="codingForm" novalidate onsubmit="return false;">
                     {% csrf_token %}
                     <div class="col-lg-5 col-md-5" ng-class="{ 'has-error': codingForm.original_text.$touched && codingForm.original_text.$invalid }">
-                        <textarea name="original_text" id="original_text" ng-change="find_key()" class="form-control not-resizable" placeholder="Введите текст для шифрования/дешифрования" rows="15" ng-model="main.original_text" required></textarea>
+                        <textarea name="original_text" id="original_text" ng-change="find_key()" class="form-control not-resizable" placeholder="Введите текст для шифрования/дешифрования" rows="15" ng-model="original_text" required></textarea>
                         <div class="help-block" ng-messages="codingForm.original_text.$error" ng-if="codingForm.original_text.$touched">
                             <p ng-message="required">Поле должно быть заполнено</p>
                         </div>
@@ -29,7 +29,7 @@
                     <div class="col-lg-2 col-md-2">
                         <div class="input-group" ng-class="{ 'has-error': codingForm.rot.$touched && codingForm.rot.$invalid }">
                             <div class="input-group-addon rot-label">ROT</div>
-                            <input type="number" class="form-control" id="rot" name="rot" ng-model="main.rot" required>
+                            <input type="number" class="form-control" id="rot" name="rot" ng-model="rot" required>
                         </div>
                         <div class="help-block" ng-messages="codingForm.rot.$error" ng-if="codingForm.rot.$touched || codingForm.$submitted">
                             <p ng-message="required">Поле должно быть заполнено</p>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="col-lg-5 col-md-5">
                         {# <fieldset disabled> #}
-                            <textarea readonly="readonly" name="modified_text" id="modified_text" class="form-control not-resizable" rows="15">{$ text $}</textarea>
+                            <textarea readonly="readonly" name="modified_text" ng-model="modified_text" id="modified_text" class="form-control not-resizable" rows="15"></textarea>
                         {# </fieldset> #}
                     </div>
 
