--- a/caesar_cipher/templates/ceasar_cipher/index.html
+++ b/caesar_cipher/templates/ceasar_cipher/index.html
@@ -87,8 +87,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-8 col-lg-push-2 col-md-push-2 center-block margin25">
                 <div ng-if="guess_rot" class="my-tooltip">
-                    <span>Возможно Вы были невнимательны и ошиблись в выборе ROT. Если у Вас не получилось дешифровать
-                        текст, то попробуйте установить <span>ROT {$ guess_rot $}</span></span>
+                    <span>Текст зашифрован! Для расшифровки используйте <span>ROT {$ guess_rot $}</span></span>
                 </div>
             </div>
         </div>
